/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.shree.containermgmt.Utils;

/**
 *
 * @author cri_r
 */
public class PageURL {

    public static final String LOGIN_PAGE = "index.jsp";
    public static final String SIGN_UP_PAGE = "signUp.jsp";
    public static final String HOME_PAGE = "home.jsp";
    public static final String ADMIN_PAGE = "admin.jsp";
}
